--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
           <select
           id="secret"
           class="form-control"
-          ngModel
+          [ngModel] = "defaultSelection"
           name="secret">
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
