--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,12 +33,19 @@
           <select
           id="secret"
           class="form-control"
-          [ngModel] = "defaultSelection"
+          [ngModel] = "defaultQuestion"
           name="secret">
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
+        <div class="form-group">
+          <textarea 
+            name="questionAnswer" 
+            rows="3"
+            [(ngModel)]="answer"></textarea>
+        </div>
+        <p>Your reply: {{answer}}</p>
         <button
         class="btn btn-primary"
         type="submit"
