--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form (ngSubmit)="onSubmit()" #f="ngForm">
-        <div id="user-data">
+        <div id="user-data" ngModelGroup="personalInfo" #personalInfo="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input
@@ -27,6 +27,7 @@
             #email="ngModel">
             <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid email!</span>
           </div>
+          <p class="help-block" *ngIf="!personalInfo.valid && personalInfo.touched">Please enter your personal details</p>
         </div>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
@@ -41,6 +42,7 @@
         </div>
         <div class="form-group">
           <textarea 
+            class="form-control"
             name="questionAnswer" 
             rows="3"
             [(ngModel)]="answer"></textarea>
