--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,16 @@
             [(ngModel)]="answer"></textarea>
         </div>
         <p>Your reply: {{answer}}</p>
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input 
+              type="radio"
+              name="genderSelection"
+              ngModel
+              [value]="gender">
+              {{ gender }}
+          </label>
+        </div>
         <button
         class="btn btn-primary"
         type="submit"
